# particles

./: .gitignore  CMakeLists.txt  collision.cpp  collision.h  direction.cpp  direction.h  dual.cpp  dual.h  dualfissile.cpp  dualfissile.h  fissile.cpp  fissile.h  main.cpp  multival.cpp  multival.h  namegen.cpp  namegen.h  normal.cpp  normal.h  particle.cpp  particle.h  particles.kdev4  photonic.cpp  photonic.h  position.cpp  position.h  simulator.cpp  simulator.h
.kdev4/: particles.kdev4
